add booking, view booking

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -8,7 +8,7 @@
       href="https://cf.bstatic.com/static/img/favicon/9ca83ba2a5a3293ff07452cb24949a5843af4592.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Booking.com |</title>
+    <title>Booking.com </title>
   </head>
   <body>
     <div id="root"></div>
